# api2cli

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/api2cli/: __init__.py  cli.py
src/api2cli/ics/: __init__.py  calendar.py  config.py  constants.py  errors.py  validators.py
src/api2cli/jina/: __init__.py  cache.py  config.py  constants.py  errors.py  pagination.py  reader.py  search.py  tokenizer.py  utils.py  validators.py
src/api2cli/minimax/: __init__.py  client.py  config.py  constants.py  errors.py  file_utils.py  image.py  tts.py  validators.py
